--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,71 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:isScrollContainer="false"
+
+<android.support.v4.widget.SwipeRefreshLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="fill_vertical"
-    android:clipToPadding="false"
+    android:id="@+id/swipe_refresh_feed_fragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:background="#f2f2f2">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:isScrollContainer="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_gravity="fill_vertical"
+        android:clipToPadding="false"
+        android:background="#f2f2f2">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp">
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp">
+
+                    <com.mikhaellopez.circularimageview.CircularImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/placeholderboy"
+                        android:id="@+id/iv_feed_fragment_user_image"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_feed_fragment_user_name"
+                        android:text="Shivam Bhasin"
+                        android:textColor="@android:color/black"
+                        android:layout_toRightOf="@+id/iv_feed_fragment_user_image"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="4dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_feed_fragment_whats_on_mind"
+                        android:text="What's on your mind?"
+                        android:layout_below="@+id/tv_feed_fragment_user_name"
+                        android:layout_marginLeft="43dp"
+                        android:textSize="20sp"
+                        android:textColor="@android:color/darker_gray"/>
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp">
+                android:layout_height="match_parent">
 
-                <com.mikhaellopez.circularimageview.CircularImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/placeholderboy"
-                    android:id="@+id/iv_feed_fragment_user_image"/>
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/rv_feed_fragment">
 
-                <TextView
+                </android.support.v7.widget.RecyclerView>
+
+                <ProgressBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_feed_fragment_user_name"
-                    android:text="Shivam Bhasin"
-                    android:textColor="@android:color/black"
-                    android:layout_toRightOf="@+id/iv_feed_fragment_user_image"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="4dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_feed_fragment_whats_on_mind"
-                    android:text="What's on your mind?"
-                    android:layout_below="@+id/tv_feed_fragment_user_name"
-                    android:layout_marginLeft="43dp"
-                    android:textSize="20sp"
-                    android:textColor="@android:color/darker_gray"/>
+                    android:layout_centerInParent="true"
+                    android:id="@+id/pb_feed_fragment"/>
 
             </RelativeLayout>
 
-        </android.support.v7.widget.CardView>
+        </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/rv_feed_fragment">
+    </android.support.v4.widget.NestedScrollView>
 
-        </android.support.v7.widget.RecyclerView>
-
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+</android.support.v4.widget.SwipeRefreshLayout>
