--- a/app/src/main/res/layout/wall_post_layout.xml
+++ b/app/src/main/res/layout/wall_post_layout.xml
@@ -35,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_wall_post_user_name"
-                    android:text="Shivam Bhasin"
+                    android:text="Loading..."
                     android:textColor="@android:color/black"
                     android:layout_toRightOf="@+id/iv_wall_post_user_image"
                     android:layout_marginLeft="8dp"
@@ -61,6 +61,32 @@
                 android:scaleType="centerCrop"
                 android:layout_marginBottom="8dp"
                 android:id="@+id/iv_wall_post_item_post_image"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:text="Liked by: 10"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="8dp">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="50"
+                    android:src="@drawable/ic_thumb_up_black_24dp"/>
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="50"
+                    android:src="@drawable/ic_comment_black_24dp"/>
+
+            </LinearLayout>
 
         </LinearLayout>
         
