added popup menu for wall posts

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.shivamvk.facebookandroid.LoginActivity"
     android:background="@android:color/holo_green_light">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,12 +18,10 @@
             android:textStyle="bold"
             android:gravity="center"
             android:layout_margin="20dp"/>
-
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_text_height"
             android:textColorHint="#ffffff">
-
             <EditText
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
@@ -47,9 +43,7 @@
                 android:textColorHint="#ffffff"
                 android:textSize="16sp"
                 android:drawableLeft="@drawable/ic_email_black_24dp"/>
-
         </android.support.design.widget.TextInputLayout>
-
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
@@ -57,12 +51,10 @@
             android:layout_marginRight="16dp"
             android:background="@android:color/black"
             android:layout_marginBottom="8dp"/>
-
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_text_height"
             android:textColorHint="#ffffff">
-
             <EditText
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
@@ -81,9 +73,7 @@
                 android:textColorHint="#ffffff"
                 android:textSize="16sp"
                 android:drawableLeft="@drawable/ic_vpn_key_black_24dp"/>
-
         </android.support.design.widget.TextInputLayout>
-
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
@@ -91,7 +81,6 @@
             android:layout_marginRight="16dp"
             android:background="@android:color/black"
             android:layout_marginBottom="8dp"/>
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -103,18 +92,21 @@
             android:id="@+id/bt_Login_button"
             android:textColor="@android:color/holo_green_dark"
             android:textSize="18sp"/>
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Don't have an acoount? Signup"
             android:gravity="center"
             android:layout_marginTop="20dp"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:id="@+id/bt_login_activity_signup_button"/>
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Forgot Password? Click here"
+            android:gravity="center"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:id="@+id/bt_login_activity_forgot_password"/>
     </LinearLayout>
-
-
-
 </android.support.constraint.ConstraintLayout>
