--- a/app/src/main/res/layout/wall_post_layout.xml
+++ b/app/src/main/res/layout/wall_post_layout.xml
@@ -4,18 +4,16 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="8dp">
-    
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="8dp"
         app:cardElevation="8dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,13 +22,11 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp">
-
                 <com.mikhaellopez.circularimageview.CircularImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:src="@drawable/placeholderboy"
                     android:id="@+id/iv_wall_post_user_image"/>
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -40,9 +36,18 @@
                     android:layout_toRightOf="@+id/iv_wall_post_user_image"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="4dp"/>
-
+                <TextView
+                    android:id="@+id/tv_wall_post_popup_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:paddingRight="8dp"
+                    android:text="&#8942;"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:textAppearance="?android:textAppearanceLargePopupMenu" />
             </RelativeLayout>
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,7 +58,6 @@
                 android:gravity="center"
                 android:layout_marginRight="16dp"
                 android:id="@+id/tv_wall_post_message"/>
-
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
@@ -61,20 +65,17 @@
                 android:scaleType="centerCrop"
                 android:layout_marginBottom="8dp"
                 android:id="@+id/iv_wall_post_item_post_image"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginBottom="8dp">
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="50"
                     android:gravity="center">
-
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
@@ -82,7 +83,6 @@
                         android:clickable="true"
                         android:id="@+id/iv_wall_post_like_button"
                         android:src="@drawable/ic_thumb_up_black_24dp"/>
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -93,16 +93,13 @@
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:background="@drawable/ronded_button"/>
-
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="50"
                     android:gravity="center">
-
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
@@ -110,7 +107,6 @@
                         android:id="@+id/iv_wall_post_comment_button"
                         android:layout_marginRight="16dp"
                         android:src="@drawable/ic_comment_black_24dp"/>
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -121,13 +117,9 @@
                         android:textColor="@android:color/white"
                         android:textSize="18sp"
                         android:background="@drawable/ronded_button"/>
-
                 </LinearLayout>
-
             </LinearLayout>
-
         </LinearLayout>
-        
-    </android.support.v7.widget.CardView>
 
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
