--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -37,7 +37,7 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp">
 
-                    <com.mikhaellopez.circularimageview.CircularImageView
+                    <ImageView
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:src="@drawable/placeholderboy"
