--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -19,7 +19,8 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_margin="10dp"
-            android:text="Sent an OTP to xyz@xyz.xyz"
+            android:textSize="15sp"
+            android:text="An OTP has been sent to xyz@xyz.xyz"
             android:textColor="@android:color/holo_green_dark" />
 
         <TextView
@@ -27,10 +28,10 @@
             android:layout_height="wrap_content"
             android:text="Enter OTP"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:layout_gravity="center"
             android:textAlignment="center"
-            android:layout_margin="20dp"/>
+            android:layout_margin="22dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,49 +40,54 @@
             android:gravity="center">
 
             <EditText
-                android:layout_width="40sp"
-                android:layout_height="42sp"
+                android:layout_width="40dp"
+                android:layout_height="44dp"
                 android:maxLength="1"
+                android:textSize="22sp"
                 android:id="@+id/et1_otp_verification"
-                android:inputType="numberPassword"
+                android:inputType="number"
                 android:textAlignment="center"
                 android:layout_margin="5dp"
-                android:text="1"
+                android:text=""
                 android:nextFocusRight="@id/et2_otp_verification">
             <requestFocus/>
             </EditText>
             <EditText
-                android:layout_width="40sp"
-                android:layout_height="42sp"
+                android:layout_width="40dp"
+                android:layout_height="44dp"
                 android:maxLength="1"
+                android:textSize="22sp"
                 android:layout_margin="5dp"
                 android:id="@+id/et2_otp_verification"
-                android:inputType="numberPassword"
+                android:inputType="number"
                 android:textAlignment="center"
-                android:text="1"/>
+                android:text=""/>
             <EditText
-                android:layout_width="40sp"
-                android:layout_height="42sp"
+                android:layout_width="40dp"
+                android:layout_height="44dp"
                 android:maxLength="1"
                 android:layout_margin="5dp"
                 android:id="@+id/et3_otp_verification"
-                android:inputType="numberPassword"
+                android:inputType="number"
                 android:textAlignment="center"
-                android:text="1"/>
+                android:textSize="22sp"
+                android:text=""/>
             <EditText
-                android:layout_width="40sp"
-                android:layout_height="42sp"
+                android:layout_width="40dp"
+                android:layout_height="44dp"
                 android:maxLength="1"
+                android:textSize="22sp"
                 android:layout_margin="5dp"
                 android:id="@+id/et4_otp_verification"
-                android:inputType="numberPassword"
+                android:inputType="number"
                 android:textAlignment="center"
-                android:text="1"/>
+                android:text=""/>
         </LinearLayout>
         <Button
             android:layout_margin="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:textSize="16sp"
             android:text="Submit"
             android:id="@+id/bt_otp_verification_activity_submit_button"/>
     </LinearLayout>
