--- a/app/src/main/res/layout/friend_request_item_layout.xml
+++ b/app/src/main/res/layout/friend_request_item_layout.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp">
 
-            <com.mikhaellopez.circularimageview.CircularImageView
+            <ImageView
+                android:scaleType="centerCrop"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="12dp"
