--- a/app/src/main/res/layout/wall_post_layout.xml
+++ b/app/src/main/res/layout/wall_post_layout.xml
@@ -22,7 +22,8 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp">
-                <com.mikhaellopez.circularimageview.CircularImageView
+                <ImageView
+                    android:scaleType="centerCrop"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:src="@drawable/placeholderboy"
