Fixed bugs for otp verification

--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -40,6 +40,7 @@
                         <ImageView
                             android:layout_width="35dp"
                             android:layout_height="35dp"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/placeholderboy"
                             android:id="@+id/iv_new_post_user_image"/>
 
