--- a/app/src/main/res/layout/wall_post_layout.xml
+++ b/app/src/main/res/layout/wall_post_layout.xml
@@ -25,6 +25,7 @@
                 <ImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/placeholderboy"
                     android:id="@+id/iv_wall_post_user_image"/>
                 <TextView
